--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,6 +6,7 @@
     left: 0;
     width: 100%;
     background: $secondary;
+    z-index: 99;
 
     .container {
         position: relative;
